--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,11 @@
-.*.aux
-.*.d
-*.a
-*.cma
-*.cmi
-*.cmo
-*.cmx
-*.cmxa
-*.cmxs
+Makefile.coq
+Makefile.coq.conf
+_build
+*~
+*.d
+*.aux
 *.glob
-*.ml.d
-*.ml4.d
-*.mli.d
-*.mllib.d
-*.mlpack.d
-*.native
-*.o
-*.v.d
-*.vio
 *.vo
+*.vio
 *.vok
 *.vos
-.coq-native/
-.csdp.cache
-.lia.cache
-.nia.cache
-.nlia.cache
-.nra.cache
-csdp.cache
-lia.cache
-nia.cache
-nlia.cache
-nra.cache
