--- a/meta.yml
+++ b/meta.yml
@@ -35,32 +35,32 @@ license:
 
 supported_coq_versions:
   text: 8.10 or later
-  opam: '{(>= "8.10" & < "8.15~") | (= "dev")}'
+  opam: '{>= "8.10" & < "8.15~"}'
 
 dependencies:
 - opam:
     name: coq-mathcomp-ssreflect
-    version: '{(>= "1.12.0" & < "1.13~") | (= "dev")}'
+    version: '{>= "1.12.0" & < "1.13~"}'
   description: |-
-    [MathComp ssreflect](https://math-comp.github.io) 1.12.0 or later
+    [MathComp ssreflect](https://math-comp.github.io) 1.12
 - opam:
     name: coq-mathcomp-fingroup
-    version: '{(>= "1.12.0" & < "1.13~") | (= "dev")}'
+    version: '{>= "1.12.0" & < "1.13~"}'
   description: |-
-    [MathComp fingroup](https://math-comp.github.io) 1.12.0 or later
+    [MathComp fingroup](https://math-comp.github.io) 1.12
 - opam:
     name: coq-mathcomp-algebra
-    version: '{(>= "1.12.0" & < "1.13~") | (= "dev")}'
+    version: '{>= "1.12.0" & < "1.13~"}'
   description: |-
-    [MathComp algebra](https://math-comp.github.io) 1.12.0 or later
+    [MathComp algebra](https://math-comp.github.io) 1.12
 - opam:
     name: coq-mathcomp-real-closed
-    version: '{(>= "1.1.2" & < "1.2~") | (= "dev")}'
+    version: '{>= "1.1.2" & < "1.2~"}'
   description: |-
     [MathComp real-closed](https://math-comp.github.io) 1.1.2 or later
 - opam:
     name: coq-coqeal
-    version: '{(>= "1.0.5" & < "1.1~") | (= "dev")}'
+    version: '{>= "1.0.5" & < "1.1~"}'
   description: |-
     [CoqEAL](https://github.com/coq-community/coqeal) 1.0.5 or later
 
