--- a/meta.yml
+++ b/meta.yml
@@ -14,8 +14,8 @@ description: |-
   normal forms, etc., converging towards a proof of the Perron-Frobenius theorem.
 
 publications:
-- pub_url: Interaction entre algèbre linéaire et analyse en formalisation des mathématiques
-  pub_title: https://tel.archives-ouvertes.fr/tel-00986283/
+- pub_url: https://tel.archives-ouvertes.fr/tel-00986283/
+  pub_title: Interaction entre algèbre linéaire et analyse en formalisation des mathématiques
 
 authors:
 - name: Guillaume Cano
@@ -89,6 +89,18 @@ keywords:
 
 categories:
 - name: Mathematics/Algebra
+
+build: |-
+  ## Building and installation instructions
+
+  To build and install, do:
+
+  ``` shell
+  git clone https://github.com/coq-community/matrix_canonical_forms.git
+  cd matrix_canonical_forms
+  make   # or make -j <number-of-cores-on-your-machine>
+  make install
+  ```
 
 documentation: |-
   ## Documentation
