--- a/meta.yml
+++ b/meta.yml
@@ -35,37 +35,37 @@ license:
 
 supported_coq_versions:
   text: 8.10 or later
-  opam: '{>= "8.10" & < "8.15~"}'
+  opam: '{(>= "8.10" & < "8.15~") | (= "dev")}'
 
 dependencies:
 - opam:
     name: coq-mathcomp-ssreflect
-    version: '{>= "1.12.0" & < "1.13~"}'
+    version: '{(>= "1.12.0" & < "1.13~") | (= "dev")}'
   description: |-
-    [MathComp ssreflect](https://math-comp.github.io) 1.12
+    [MathComp ssreflect](https://math-comp.github.io) 1.12 or later
 - opam:
     name: coq-mathcomp-fingroup
-    version: '{>= "1.12.0" & < "1.13~"}'
   description: |-
-    [MathComp fingroup](https://math-comp.github.io) 1.12
+    [MathComp fingroup](https://math-comp.github.io)
 - opam:
     name: coq-mathcomp-algebra
-    version: '{>= "1.12.0" & < "1.13~"}'
   description: |-
-    [MathComp algebra](https://math-comp.github.io) 1.12
+    [MathComp algebra](https://math-comp.github.io)
 - opam:
     name: coq-mathcomp-real-closed
-    version: '{>= "1.1.2" & < "1.2~"}'
+    version: '{(>= "1.1.2" & < "1.2~") | (= "dev")}'
   description: |-
     [MathComp real-closed](https://math-comp.github.io) 1.1.2 or later
 - opam:
     name: coq-coqeal
-    version: '{>= "1.0.5" & < "1.1~"}'
+    version: '{(>= "1.0.5" & < "1.1~") | (= "dev")}'
   description: |-
     [CoqEAL](https://github.com/coq-community/coqeal) 1.0.5 or later
 
 
 tested_coq_opam_versions:
+- version: 'coq-dev'
+  repo: 'mathcomp/mathcomp-dev'
 - version: '1.12.0-coq-8.13'
   repo: 'mathcomp/mathcomp'
 - version: '1.12.0-coq-8.12'
