--- a/meta.yml
+++ b/meta.yml
@@ -63,10 +63,11 @@ dependencies:
   description: |-
     [CoqEAL](https://github.com/coq-community/coqeal) 1.0.5 or later
 
-
 tested_coq_opam_versions:
 - version: 'coq-dev'
   repo: 'mathcomp/mathcomp-dev'
+- version: '1.12.0-coq-8.14'
+  repo: 'mathcomp/mathcomp'
 - version: '1.12.0-coq-8.13'
   repo: 'mathcomp/mathcomp'
 - version: '1.12.0-coq-8.12'
